--- a/AhnDaehyun/chrome/practice/index.css
+++ b/AhnDaehyun/chrome/practice/index.css
@@ -1,10 +1,10 @@
 body {
-  background-color: peru;
+  background-color: #ecf0f1;
 }
 
-h1 {
+body {
   color: #34495e;
-  transition: color 0.5s ease-in-out;
+  /* transition: color 0.5s ease-in-out; */
 }
 
 .clicked {
